# modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -5,6 +5,11 @@ components:
             description:
                 An account represents an external account, for example a customer business.
             properties:
+                accountIds:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
                 accountUserAccounts:
                     description:
                         The users linked to the account
@@ -21,10 +26,21 @@ components:
                         Block of actions allowed by the user making the request.
                     readOnly: true
                     type: object
+                addressIds:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
                 customFields:
                     items:
                         $ref: "#/components/schemas/CustomField"
                     type: array
+                defaultBillingAddressId:
+                    format: int64
+                    type: integer
+                defaultShippingAddressId:
+                    format: int64
+                    type: integer
                 description:
                     type: string
                 domains:
@@ -44,6 +60,11 @@ components:
                     format: int64
                     readOnly: true
                     type: integer
+                logoId:
+                    format: int64
+                    type: integer
+                logoURL:
+                    type: string
                 name:
                     type: string
                 numberOfUsers:
@@ -61,6 +82,9 @@ components:
                     type: integer
                 status:
                     type: integer
+                taxId:
+                    example: Abcd1234
+                    type: string
                 type:
                     enum: [business, guest, person, supplier]
             required:
@@ -2315,6 +2339,32 @@ paths:
                                     $ref: "#/components/schemas/AccountGroup"
                                 type: array
             tags: ["AccountGroup"]
+    "/accounts/by-externalReferenceCode/{externalReferenceCode}/logo":
+        post:
+            operationId: postAccountByExternalReferenceCodeLogo
+            parameters:
+                - in: path
+                  name: externalReferenceCode
+                  required: true
+                  schema:
+                      type: string
+            requestBody:
+                content:
+                    multipart/form-data:
+                        schema:
+                            $ref: "#/components/schemas/Image"
+                required: true
+            responses:
+                201:
+                    description:
+                        Created
+                204:
+                    description:
+                        Updated
+                400:
+                    description:
+                        Invalid input
+            tags: ["Account"]
     "/accounts/{accountId}":
         delete:
             # @review
@@ -2593,6 +2643,33 @@ paths:
                                     $ref: "#/components/schemas/AccountGroup"
                                 type: array
             tags: ["AccountGroup"]
+    "/accounts/{accountId}/logo":
+        post:
+            operationId: postAccountLogo
+            parameters:
+                - in: path
+                  name: accountId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+            requestBody:
+                content:
+                    multipart/form-data:
+                        schema:
+                            $ref: "#/components/schemas/Image"
+                required: true
+            responses:
+                201:
+                    description:
+                        Created
+                204:
+                    description:
+                        Updated
+                400:
+                    description:
+                        Invalid input
+            tags: ["Account"]
     "/accounts/{accountId}/organizations":
         get:
             description:
