# modules/apps/headless/headless-admin-user/headless-admin-user-impl/src/main/java/com/liferay/headless/admin/user/internal/dto/v1_0/converter/AccountResourceDTOConverter.java
@@ -16,15 +16,20 @@ package com.liferay.headless.admin.user.internal.dto.v1_0.converter;
 
 import com.liferay.account.model.AccountEntry;
 import com.liferay.account.model.AccountEntryOrganizationRel;
+import com.liferay.account.model.AccountEntryUserRel;
 import com.liferay.account.service.AccountEntryLocalService;
 import com.liferay.account.service.AccountEntryOrganizationRelLocalService;
 import com.liferay.account.service.AccountEntryUserRelLocalService;
 import com.liferay.headless.admin.user.dto.v1_0.Account;
 import com.liferay.headless.admin.user.internal.dto.v1_0.util.CustomFieldsUtil;
 import com.liferay.petra.function.transform.TransformUtil;
+import com.liferay.petra.string.StringBundler;
+import com.liferay.portal.kernel.model.Address;
 import com.liferay.portal.kernel.security.auth.CompanyThreadLocal;
+import com.liferay.portal.kernel.service.AddressLocalService;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.StringUtil;
+import com.liferay.portal.kernel.webserver.WebServerServletToken;
 import com.liferay.portal.vulcan.dto.converter.DTOConverter;
 import com.liferay.portal.vulcan.dto.converter.DTOConverterContext;
 
@@ -83,17 +88,34 @@ public class AccountResourceDTOConverter
 
 		return new Account() {
 			{
+				accountIds = TransformUtil.transformToArray(
+					_accountEntryUserRelLocalService.
+						getAccountEntryUserRelsByAccountEntryId(
+							accountEntry.getAccountEntryId()),
+					AccountEntryUserRel::getAccountEntryId, Long.class);
 				actions = dtoConverterContext.getActions();
+				addressIds = TransformUtil.transformToArray(
+					_addressLocalService.getAddresses(
+						accountEntry.getCompanyId(),
+						AccountEntry.class.getName(),
+						accountEntry.getAccountEntryId()),
+					Address::getAddressId, Long.class);
 				customFields = CustomFieldsUtil.toCustomFields(
 					dtoConverterContext.isAcceptAllLanguages(),
 					AccountEntry.class.getName(),
 					accountEntry.getAccountEntryId(),
 					accountEntry.getCompanyId(),
 					dtoConverterContext.getLocale());
+				defaultBillingAddressId =
+					accountEntry.getDefaultBillingAddressId();
+				defaultShippingAddressId =
+					accountEntry.getDefaultShippingAddressId();
 				description = accountEntry.getDescription();
 				domains = StringUtil.split(accountEntry.getDomains());
 				externalReferenceCode = accountEntry.getExternalReferenceCode();
 				id = accountEntry.getAccountEntryId();
+				logoId = accountEntry.getLogoId();
+				logoURL = _getLogoURL(accountEntry.getLogoId());
 				name = accountEntry.getName();
 				numberOfUsers =
 					(int)
@@ -107,9 +129,16 @@ public class AccountResourceDTOConverter
 					AccountEntryOrganizationRel::getOrganizationId, Long.class);
 				parentAccountId = accountEntry.getParentAccountEntryId();
 				status = accountEntry.getStatus();
+				taxId = accountEntry.getTaxIdNumber();
 				type = Account.Type.create(accountEntry.getType());
 			}
 		};
+	}
+
+	private String _getLogoURL(long logoId) {
+		return StringBundler.concat(
+			"/image/organization_logo?img_id=", logoId, "&t=",
+			_webServerServletToken.getToken(logoId));
 	}
 
 	@Reference
@@ -121,5 +150,11 @@ public class AccountResourceDTOConverter
 
 	@Reference
 	private AccountEntryUserRelLocalService _accountEntryUserRelLocalService;
+
+	@Reference
+	private AddressLocalService _addressLocalService;
+
+	@Reference
+	private WebServerServletToken _webServerServletToken;
 
 }
